@@ -4,12 +4,14 @@ DIST calculate-lib-2.1.3.tar.bz2 56401 RMD160 874790c1fbf3c8410650276dee1eb28e59
 DIST calculate-lib-2.1.4.tar.bz2 56477 RMD160 d94ada432e37af8210762c4522bbf6f628361890 SHA1 f6a7a220b323a65fc48c01d58c31a9f33075bbe9 SHA256 6af0fb5b03999c3d979f88c4f6398a2063409f53609a7e88164081e6a90084b5
 DIST calculate-lib-2.1.5.tar.bz2 57305 RMD160 79bbef22958484fa00e38a494f03ed9c40426d70 SHA1 cd29adf95fda8ecbc7ea376271dfa128848cdd22 SHA256 9d1622b2939cd7b4d1cf8011d321ed4196ec81e54397132122fc70152832bc57
 DIST calculate-lib-2.1.7.tar.bz2 59734 RMD160 61aad4dcb79a3c7b4dabbb38368ab3625c9fd495 SHA1 68f43a24ad5caa8018c984c610934046c6c1c54b SHA256 bd41dd5e8a850837df412ad4a6f700f65df7adfce17df02b9d90a56d7e19fc7f
+DIST calculate-lib-2.1.8.tar.bz2 61178 RMD160 4a4ed063a9b4d3b82723f5f6eb046c97ad9fcda1 SHA1 93eb20057afff6e98c409388e1259a3ad078bb7a SHA256 ef8e315001663da7a45e69b82dc7c158fb0e10bd567efa95bf8a654ed441144a
 EBUILD calculate-lib-2.1.1.ebuild 568 RMD160 dada9f5462abf928e73a64c911a9def523c14f96 SHA1 ce4f481b37a32f50a1521022cfc7c7c086c466fb SHA256 f151a208895bfc3ac276f9ce501dbe47ceb4027fc7daf0cc668d7a82ef23e5e1
 EBUILD calculate-lib-2.1.2.ebuild 568 RMD160 857f9a497e9764ab0c2d3939076ced145bfe16f3 SHA1 04916eea3b0ad605e4e07a23515b26064e2c5a19 SHA256 ea1d0b2e16f23a84ac341ea174ab6220a39778f6fd6b345eeb3d3d7e9e9bff85
 EBUILD calculate-lib-2.1.3-r1.ebuild 568 RMD160 e318239699945076b0a42b77f3291d1b139b5faf SHA1 6acf56821b73472dc9716727f5e69e88c13925aa SHA256 ede39dadeec33c468f196a38e64dedc93b858e94b0bb6c8f1e099d0db9beeef6
 EBUILD calculate-lib-2.1.4.ebuild 568 RMD160 d9ddd61ef3c20ae234653b96381c4751230ffc2a SHA1 b379d44e4600b22c48f97e2799e7d74b002eb43f SHA256 65e4a68c0d89e31fd909de65a2be55195f23fae81bb78e9a96f42c399d6364c8
 EBUILD calculate-lib-2.1.5.ebuild 576 RMD160 c0db6657ecd97b2dcc407d6975942652804442b7 SHA1 14a611ba58c15f5c0459ed71a1320891ff478479 SHA256 aacb4aa0583b95f14ddd3547fcaa3466c62e6473300741565968f06a91084469
 EBUILD calculate-lib-2.1.7.ebuild 578 RMD160 673b894f3992ce17a6f31e4deb292c647eb96690 SHA1 f73944ea64b1d3a1f9d1027be32efb2e22a4a796 SHA256 2406070a830ac39f4701ece61d7b2d7d5a220e057db19078b23ce50b3649dbbf
+EBUILD calculate-lib-2.1.8.ebuild 578 RMD160 a76c3b9ab13bf4f69d002904d41b01889958adf9 SHA1 91cfabb263365be7800296969a48abfc831f0d8f SHA256 c796f7dfbc321c6580706b63780321efaaa50d9e7fc363bdfef6890365166d03
 EBUILD calculate-lib-9999.ebuild 480 RMD160 042b18ce064ab98481c27af2259573cd54c4efa0 SHA1 c3cb4cc7dfe7ee34a4edb154986bd0d11968bcfd SHA256 7f7edb76721770042bc6550a5743bf2914b6b24a0be0b917d87f11863d93b921
-MISC ChangeLog 596 RMD160 3b4fa60d3b67b238e47cc3c3799b28e30ca2e305 SHA1 99260a8f6e1b83cab2974efeee938e870c19aca2 SHA256 2a8f8b8e30cf1d98be14ae1b75071e6f2f089e4ae189703d9ec2466570adfef4
+MISC ChangeLog 740 RMD160 0e9ab8715c90bf9f5cc4efeba74092c7fdc31d10 SHA1 533b8be77a70133cd602e43ef2bf00b18f8fd4b4 SHA256 4a8ce3bd5ee51de1ff5b87d42a0a0a257a63bb0fe0768b825425717dbd8858e6
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
