@@ -1,17 +1,19 @@
 AUX calculate-server-2.1.5-r2.patch 513 RMD160 bdbf1e6568dc70c804cbff8199d7a0b28ab56f5a SHA1 601e4746b15c0ca625d5e7253853f86e4c183f3d SHA256 cd58cb981385e4a13862b03348383b6f05cf685b6fd5aa35fc7964dac3c7a2c0
 AUX calculate-server-2.1.7-r1.patch 598 RMD160 60e0fa90210c0701ef8854a573913b4705081e6f SHA1 45926b4ece69b18c12e315cb7b11e15fb222427c SHA256 1cd4b63b4f00afb8cabfd23da282ca489d29466cd09eb651102573a7fefa340e
 DIST calculate-server-2.1.10.tar.bz2 153544 RMD160 b5c6085aef1e3eb57cf5c356ab9dcef6d1352f45 SHA1 b8f666b308293f74e1be135e5fc362014e8f2763 SHA256 ff015464535b833936df041466f21105a841ac9853cb545bb99c9f0096e55559
+DIST calculate-server-2.1.11.tar.bz2 156760 RMD160 5d401f58124745adf945f1d822833f5bbb0eeb69 SHA1 728542e82642c12236ed7246716991ee1e5d0ecb SHA256 d2345450f993814c6763acdcc93a40eea1da37ab9eaeff652e8bd2970ed7ac56
 DIST calculate-server-2.1.5.tar.bz2 151750 RMD160 f34df55deb04d4f324425c3c6b0a6b3ff570e276 SHA1 39ce789cf80d82e0e99d02498ab6bf0b3e25ea28 SHA256 209b9c3a1a46431504c032406aa19eb224390ad1ab3ab2ecb5b1bc9467ce7804
 DIST calculate-server-2.1.6-r1.tar.bz2 154333 RMD160 46896e8cb887228e4b33cfad92e1471dd155cb5c SHA1 992f0b2e0e0f9cf4d2b2e1e03597797263a97860 SHA256 d57e0694e893aa311cfce369c0c972a742dcc4bccbd37a8c994b319d78010a51
 DIST calculate-server-2.1.6.tar.bz2 154350 RMD160 d9b857fc20e963cee015ffb285bbbb68cf0da133 SHA1 dda2fa50f319f7b4cf011dd90dea6ac0fe1c068e SHA256 2c2e0880d5ae997717e4fc9da7f1536c650191f1087b0fc00247e75395b9e8ab
 DIST calculate-server-2.1.7.tar.bz2 154321 RMD160 f624bf46820b4d93169aa1abb9201e962d9988f0 SHA1 ea7ea86ef50ba71e37a2f80393dea386784c1f3a SHA256 6522377222517a7cca5c5a0df62360868efde73b36d581f5a086f778710dcb0d
 DIST calculate-server-2.1.8.tar.bz2 154625 RMD160 9998acb81fae3b6d4a4bd450d9faed2ab68f4f9e SHA1 00efa357432fbaee955b5284ffa2ccc4ded354fa SHA256 69957f74f8682935699f884b186b5b5f909453ad82deaa6fad285ff9c6cbcaa6
 EBUILD calculate-server-2.1.10.ebuild 4993 RMD160 40e2e6af9fffa2e3fd1684fa35cf482bfbb9f38a SHA1 e20689d73a7f11ce2071f2158d2d68744527915d SHA256 28a855882877d9fd847b700db8e710bc48b96560910db13e5b21dc4facb505a9
+EBUILD calculate-server-2.1.11.ebuild 5001 RMD160 562499e7cbc8a8ea315b4c8c21c50368b09f896f SHA1 4fbe04cb80f3932b17ab2ba499c4ad571fa22ec7 SHA256 18b113b790bf4b8b7723dc36c8b41076868cc9b0a5fdc1d43bb554d6ea755c85
 EBUILD calculate-server-2.1.5-r2.ebuild 5261 RMD160 1f74308ac9eb78422c1530967ca0f82cf68a6198 SHA1 b4a1d8412ef801c9a48a46310a554d0c0942cea3 SHA256 6c0fe4e6b269e5c892e8420d123deaf36612a92a921873586f215b5f91cecddf
 EBUILD calculate-server-2.1.6-r1.ebuild 5102 RMD160 4041b5bb095c0567aafa92a0458a4f5e8c178743 SHA1 fd6e3ca606af59dbd4aa9a0f67b8356ddfe04e04 SHA256 3d2425658e13bc0beaddfce23f9507d70efc97590137bfd19304c6e3db5cbc5d
 EBUILD calculate-server-2.1.6.ebuild 5078 RMD160 a69211cbbf172260db125b64db3d931cbaec00e6 SHA1 498a844ce008a90c472e03559c092ee673a5f3b0 SHA256 076c53da76a0f3137012293d5f0e6ab8437408c572d2ed2c1818d7aa7304e19e
 EBUILD calculate-server-2.1.7-r1.ebuild 5275 RMD160 1f5f49295ae71e06ff019f5ec22a068763affe93 SHA1 57b82a324202057292fd3bef5337a80549fd2912 SHA256 1eb9adae943ef042b9b4a7c3fcc40ca3bf878ad9f2b5f9fcf2a089567dd26509
-EBUILD calculate-server-2.1.8.ebuild 5086 RMD160 5879b2b2198f2fbd3c64062b45cd908a26c24d29 SHA1 92b92e49cec792e148181da9fc3b6ad134ac5e28 SHA256 8ccb307bd635f1cf2b2d70249dbfc1e6aa559c8c10a04cdabd260d4948eeaaab
+EBUILD calculate-server-2.1.8.ebuild 5094 RMD160 a7e21e28937fd4dfc49ba2e5f606f5501c53c60e SHA1 0e00945d95d73d5ef8fbf680c790ebde61633582 SHA256 cbea4f73086222684cc1fcaa2719eab56df5ac0c8517226853397fca2f9df70b
 EBUILD calculate-server-9999.ebuild 1154 RMD160 3cc8e7db188c9cb1abc2732223baa46e81592295 SHA1 61ac0dab413af4dafd7048f15728238e7f542811 SHA256 58052626ab45ed5af63b5bfa04ba2f74529bc1f56652de146484f85acba67700
-MISC ChangeLog 2324 RMD160 71d339492465001f46521dd9a2877e6610e9e5fe SHA1 63e1660161d364f0102679af990f5804ae19d8ce SHA256 566dd1f40750755e33ce013bd41ff955229c68c3f009625f5b046f3cae1fd187
+MISC ChangeLog 2476 RMD160 c8c7d6be767b3faa3a653d0b8e947ab722340d80 SHA1 790c814ca8ac428fcd9d8ecd7ae6c687240a02a2 SHA256 dcb0795deaf717de3dd59cea095bf5f457efc186b8bd254efc1e36ab5a82f2d8
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
