@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.11 (05 Apr 2010)
+
+  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-server-2.1.11.ebuild:
+  Bump version.
+
 *calculate-server-2.1.10 (15 Mar 2010)
 
   15 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
