@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.1.8 (05 Apr 2010)
+
+  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-lib-2.1.8.ebuild:
+  Bump version.
+
 *calculate-lib-2.1.7 (15 Mar 2010)
 
   15 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
